--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,32 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  checkstyle:
+    name: Checkstyle
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: 19
+          distribution: 'temurin'
+          cache: 'gradle'
+      - name: Run check style reporter
+        uses: nikitasavinov/checkstyle-action@master
+        with:
+          reporter: github-pr-review
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          checkstyle_config: 'config/checkstyle/checkstyle_reviewdog.xml'
+          checkstyle_version: '10.3'
+      - name: Run checkstyle gradle
+        run: ./gradlew checkstyleMain checkstyleTest checkstyleJmh
+      - name: Run markdown-lint
+        uses: avto-dev/markdown-lint@v1
+        with:
+          args: CHANGELOG.md CONTRIBUTING.md README.md
+          config: '.markdownlint.yml'
   tests:
     name: Unit tests
     runs-on: ubuntu-latest
